# frontend-ai-agents

./: .gitignore  README.md  index.html  main.py  pyproject.toml
app/: __init__.py  agents.py  config.py  graph.py  mcp_server.py  routes.py  tools.py
tests/: test_main.py
