[project]
name = "frontend-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "langchain-openai>=1.2.2",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.2.2",
    "mcp>=1.27.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
]
